--- a/client/src/styles/module.scss
+++ b/client/src/styles/module.scss
@@ -206,6 +206,14 @@ input {
 
     & > div:last-child {
       margin-left: auto;
+      display: flex;
+      flex-direction: column;
+      align-items: end;
+      gap: 0.2rem;
+
+      svg {
+        font-size: 0.8rem;
+      }
     }
 
     &.s-active {
